Fixing for text overflow in project title

--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -40,6 +40,9 @@
             &_title {
                 font-weight: bold;
                 color: colors.$purple3;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
 
             &_description {
